# bobkonf2017

./: .travis.yml  LICENSE  Main.hs  README.md  bobkonf2017.cabal
src/Bobkonf/: Hello.hs  SMS.hs  Sorting.hs
