name:                bobkonf2017
version:             0.1.0.0
synopsis:            Tutorial at BOB Konferenz 2017
homepage:            https://github.com/larsrh/bobkonf2017
license:             MIT
license-file:        LICENSE
author:              Lars Hupel
maintainer:          lars@hupel.info
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:
      Bobkonf.Hello
    , Bobkonf.SMS
    , Bobkonf.Sorting
  build-depends:
      base >=4.8 && <4.10
  hs-source-dirs:      src
  ghc-options:         -Wall -Werror
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
      base >=4.8 && <4.10
    , bobkonf2017
    , containers ==0.5.*
    , tasty ==0.11.*
    , tasty-quickcheck ==0.8.*
    , QuickCheck ==2.8.*
